--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -54,6 +54,7 @@
             android:layout_below="@id/usernameInfo"
             android:singleLine="true"
             android:inputType="text"
+            android:text="1"
             />
         <!--密码 -->
         <TextView 
@@ -76,6 +77,7 @@
             android:layout_marginRight="5dip"
             android:singleLine="true"
             android:inputType="textPassword"
+            android:text="1"
             />
         
         <RadioGroup 
