--- a/res/layout/setting_center.xml
+++ b/res/layout/setting_center.xml
@@ -5,6 +5,28 @@
     android:background="@color/background_3"
     android:orientation="vertical" >
     
+    <RelativeLayout 
+	    android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
+        
+        <ImageView
+	        android:layout_centerInParent="true"
+	        android:layout_alignParentLeft="true"
+	        android:layout_width="45px"
+	        android:layout_height="45px"
+	        android:id="@+id/back"
+	        android:src="@drawable/left_icon_small"/>
+       <TextView
+	        android:layout_centerInParent="true"
+	        android:layout_toRightOf="@id/back"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textSize="20sp"
+	        android:text="设置中心"/>
+
+	</RelativeLayout>
+    
     <ScrollView 
         android:scrollbars="none"
         android:layout_width="match_parent"
