--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -51,6 +51,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal"
+	        android:visibility="invisible"
 	        android:layout_centerInParent="true">
 	        <ProgressBar 
 		        android:layout_width="wrap_content" 
