--- a/res/layout/check_in.xml
+++ b/res/layout/check_in.xml
@@ -1,7 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@color/background_4"
     android:orientation="vertical" >
     <RelativeLayout 
@@ -53,6 +52,7 @@
 			    android:layout_height="wrap_content"
 			    android:orientation="horizontal">
 			    
+			    
 			    <ToggleButton 
 			        android:id="@+id/catch_voice_togglebutton"
 			        android:layout_width="100dip"
@@ -76,7 +76,8 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scrollbars="none">
-        <LinearLayout android:layout_width="fill_parent"
+        <LinearLayout 
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
         
@@ -266,9 +267,8 @@
    			android:layout_width="fill_parent"  
     		android:layout_height="2px"
     		android:layout_margin="3dip"
-   			android:background="@color/background_5"  
+   			android:background="@color/background_5" 
 		/> 
-		
 		
 		
     </LinearLayout>
